
ChangeLog
 [ + added, - removed, * changed ]
 * 17Sep2013 Improved instrumentation support for MPI_Comm_spawn. Now supports concurrent spawns from different process of the parent application.
 + 09Sep2013 Added a quicksort algorithm for files 
 * 09Sep2013 Revamped pthread event types so as all calls are only one type
             Prepare scripts for LSF & slurm (MPI)
 * 06Sep2013 Fixed some warnings
             Read /proc/self/maps to know which binaries & libraries are used
             Create tests to test the usage of binaries & libraries
             Additional location for MPI libraries / includes / binaries in BG/Q
             Many minor bugfixes
             Fixed minor configure/compilation issues
             Protected includes of system headers by their appropriate #ifdef's
             Added missing licensing headers
 * 05Sep2013 Upgraded to version 3.0rc2
             Major changes to the on-line analysis. The front-end is now launched as a separate process.
 + 05Sep2013 Added a new control (matching_zone) to the communications matching algorithm, so as not to make matches that cross areas where the tracing was disabled.
 * 02Sep2013 Fixing OpenCL instrumentation (added clRetain & clRelease calls)
             Fixed some event mismatches in the OpenCL accelerator side
             Added OpenCL C++ example
 * 30Jul2013 Added overwrite option in <merge> section
             Removed unused 'remove-files' in favor of 'keep-mpits'
             Fix fortran declarations on API
             Fix MPI interfaces declarations
 * 29Jul2013 Fixed generation of codelocation & user function in nanos stacked
 + 19Jul2013 Add CPU information at begin & end of
               - routine executing pthread_create
               - OpenMP worksharing, function, ... *
             Add multiple overhead tests
 + 17Jul2013 Added overhead tests
 * 15Jul2013 Fixed OpenCL timing issues, added MPI+OpenCL example
 * 09Jul2013 Fix sampling handler callstack level